1.login auth header 2.style change

--- a/src/routes/App/index.scss
+++ b/src/routes/App/index.scss
@@ -1,3 +1,9 @@
 .test{
     background-color: red;
 }
+
+.app-header{
+    @include display-flex(row,flex-end,center);
+    background-color:#fff;
+    margin-bottom: 10px;
+}
