login,register,article,roles

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -21,7 +21,7 @@ $orange:#ff9800;
 $red:#e91e63;
 $blue:#00bcd4;
 $purple:purple;
-$grey: #9e9e9e;
+$grey: #ddd;
 $black:#505050;
 $green:green;
 $gold:rgb(255,215,0);
