--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -66,4 +66,12 @@ button {
 
 .ant-layout-header{
     background: none;
+    padding: 0;
+}
+
+.ant-layout{
+    background: none;
+}
+.rdw-embedded-modal{
+    height: 250px !important;
 }
