--- a/src/routes/App/index.scss
+++ b/src/routes/App/index.scss
@@ -1,9 +1,21 @@
-.test{
+.test {
     background-color: red;
 }
 
-.app-header{
-    @include display-flex(row,flex-end,center);
-    background-color:#fff;
+.app-header {
+    @include display-flex(row, flex-end, center);
+    background-color: #fff;
     margin-bottom: 10px;
+    @include bd(bottom);
+}
+
+.app-content {
+    margin: 20px;
+    @include bd();
+    background-color: $white;
+}
+
+.trangle {
+    border: 50px solid transparent;
+    border-bottom: 50px solid red;
 }
