--- a/src/routes/_index.scss
+++ b/src/routes/_index.scss
@@ -1,3 +1,5 @@
 @import './Login/index';
 @import './Register/index.scss';
 @import './App/index.scss';
+@import './Users/Roles/List/index.scss';
+@import './Home/index.scss';
